rollouts/k8s/kustomize/base/ingress-kind.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: argo-rollouts-192.168.0.100.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
